<resources>
    <string name="app_name">AUTORYZACJA</string>
    <string name="action_sign_in_short">Rejestracja</string>
    <string name="email">Email</string>
    <string name="minimum_password">Haslo jest za ktotkie, minimum 6 znakow</string>
    <string name="auth_failed">Autoryzacja nieudana, Zly login lub haslo</string>
    <string name="change_email">Zmien email</string>
    <string name="change_password">Zmien haslo</string>
    <string name="send_password_reset_email">Resetuj haslo</string>
    <string name="remove_user">Usun uzytkownika</string>
    <string name="new_pass">Zmien haslo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Haslo</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Zarejestruj sie</string>
    <string name="btn_link_to_login">Zarejestrowany, Zaloguj sie!</string>
    <string name="btn_forgot_password">Zapomniales swojego hasla?</string>
    <string name="btn_reset_password">Resetuj haslo</string>
    <string name="btn_back"><![CDATA[<< Powrot]]></string>
    <string name="hint_new_email">Nowy email</string>
    <string name="btn_change">Sprawdz</string>
    <string name="btn_send">Wyslij</string>
    <string name="btn_remove">Usun</string>
    <string name="btn_sign_out">Wyloguj</string>
    <string name="lbl_forgot_password">Zapomniales hasla?</string>
    <string name="forgot_password_msg">Musimy po prostu swój adres email Id aby wysłał Ci instrukcje resetowania hasła.</string>
    <string name="date_format">dd.MM.yyyy HH:mm</string>
    <string name="tst_added_devices_success">Urządzenie zostało dodane</string>
    <string name="tst_added_devices_fail">Urządzenie nie zostało dodane</string>
    <string name="tst_employed_success">Urzytkownik został dodany</string>
    <string name="tst_is_exist">istnieje </string>
    <string name="dialog_internet_title">Alarm!!</string>
    <string name="dialog_internet_message">Do Prawidłowego działania aplikacji jest potrzeny internet</string>
    <string name="dialog_internet_positive">Wi-Fi</string>
    <string name="dialog_internet_negative">Cofnij</string>
    <string name="tst_fail_response_get_devices_employed_list">Nie udalo sie zaladowac listy uzytkownikow</string>
    <string name="tst_fail_response_get_devices_list">Nie udalo sie zaladowac listy urzadzen</string>
    <string name="tst_fail_response_get_search_user_fail">Nie znaleziono uzytkownika</string>
    <string name="fail_response_get_search_device_fail">Nie znaleziono przedmiotu</string>
    <string name="tst_validation_empty_filed">Nie znaleziono przedmiotu</string>
    <string name="sb_file_is_exist">Plik juz istnieje</string>

    action_menu
    <string name="action_add_user">Dodaj pracownika"</string>
    <string name="action_add_devices">Dodaj urzadzenie</string>
    <string name="action_save_to_file">Exportuj do CSV</string>
    <string name="action_settings">Ustawienia</string>
    <string name="lb_file_name">Podaj nazwe pliku</string>
    <string name="hint_search_user">Szukaj Pracownika</string>
    <string name="btn_search">Szukaj</string>
    <string name="hint_device_name">Nazwa urzadzenia</string>
    <string name="hint_stocktaking_data">Data inwentaryzacji</string>
    <string name="hint_location">Gdzie sie znajduje</string>
    <string name="hint_stocktaking_person">Kto inwentaryzowal</string>
    <string name="hint_mark">Marka</string>
    <string name="hint_serial_number">Numer seryjny</string>
    <string name="hint_device_type">Rodzaj Urzadzenia</string>
    <string name="btn_add_devices">Dodaj urzadzenie</string>
    <string name="model">Model</string>
    <string name="hint_user_name">Nazwa uzytkownika</string>
    <string name="hint_telephone_number">Numer Telefonu</string>
    <string name="hint_skype">Skype</string>
    <string name="btn_add_user">Dodaj uzytkownika</string>
    <string name="btn_scan_qr_code">Skanuj QrCode</string>
    <string name="btn_scan_show_devices">Pokaz urzadzenia</string>
    <string name="lb_employees">Pracownicy</string>
    <string name="tst_enter_mail">"Wprowadz Email!!"</string>
    <string name="tst_enter_password">"Wprowadz Haslo"</string>
    <string name="intent_device_name">Device_name</string>
    <string name="tst_enter_emil_in_register">"Podaj email na ktory jest zarejestrowales konto"</string>
    <string name="tst_send_instructions">"Wyslalismy na twoj email instrukcje jak zrestartowac haslo"</string>
    <string name="tst_send_email_fail">"Nie udalo sie wyslać email"</string>
    <string name="tst_email_update_success">"Emial zaktualizowany. Zaloguj sie na nowe konto"</string>
    <string name="tst_email_update_fail">"Nie udalo sie zaktualizowac Email"</string>
    <string name="tst_password_update_success">"Haslo zaktualizowane. Zaloguj sie na haslo konto"</string>
    <string name="tst_password_update_fail">"Nie udalo sie zaktualizowac hasla"</string>
    <string name="tst_restart_password_success">Nowe haslo zostalo wyslane</string>
    <string name="tst_restart_password_fail">Nowe haslo nie zostalo wyslane</string>
    <string name="tst_delete_account_success">Konto zostalo usuniete, wyloguj sie </string>
    <string name="tst_delete_account_fail">Nie udalo sie usunac konta</string>
    <string name="sbInstallPrograms">Zainstaluj odpowiednie oprogramowanie :)</string>
    <string name="sb_file_is_empty">Nazwa pliku nie moze byc pusta</string>
    <string name="btn_save_file">Zapisz plik</string>
    <string name="search">Search</string>
    <string name="lb_name_activity_SettingUserActivity">Ustawienia</string>
    <string name="lb_name_activity_SignupActivity">Rejestracja</string>
    <string name="lb_name_activity_ResetPasswordActivity">Restart hasla</string>
    <string name="lb_name_activity_MenuActivity">Szukaj przedmiotu</string>
    <string name="lb_name_activity_DevicesDetailsListActivity">Szczegoly o urzadzeniu</string>
    <string name="lb_name_activity_EmployeesListActivity">Lista Pracownikow</string>
    <string name="lb_name_activity_EmployeesDetailsListActivity">Szczegoly</string>
    <string name="lb_name_activity_AddUserActivity">Dodaj pracownika</string>
    <string name="lb_name_activity_AddDevicesActivity">Dodaj urzadzenie</string>
    <string name="lb_name_activity_SaveToFile">Zapisz do pliku"</string>
    <string name="lb_name_activity_DevicesListActivity">Lista Urzadzen</string>


</resources>
