<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.radek.myapplication.MainActivity">
    <item
        android:id="@+id/action_add_user"
        android:orderInCategory="100"
        android:title="@string/action_add_user"
         />
    <item
        android:id="@+id/action_add_devices"
        android:orderInCategory="100"
        android:title="@string/action_add_devices"
         />
    <item
        android:id="@+id/action_save_to_file"
        android:orderInCategory="100"
        android:title="@string/action_save_to_file"
         />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
         />

</menu>
