<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_device_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_color"
    tools:context=".Activity.AddDevicesActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="?attr/actionBarSize"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">


            <EditText
                android:id="@+id/et_Device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_device_name"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:maxLength="@integer/max_length_et_device_name"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_data_stocktacking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_stocktaking_data"
                android:imeActionId="@+id/login"
                android:maxLength="@integer/max_length_et_data_stocktacking"
                android:imeOptions="actionUnspecified"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location"
                android:imeActionId="@+id/login"
                android:maxLength="@integer/max_length_et_location"
                android:imeOptions="actionUnspecified"
                android:maxLines="1" />

            <EditText
                android:id="@+id/stocktacking_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_stocktaking_person"
                android:imeActionId="@+id/login"
                android:maxLength="@integer/max_length_et_stocktacking_person"
                android:imeOptions="actionUnspecified"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_mark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mark"
                android:imeActionId="@+id/login"
                android:maxLength="@integer/max_length_et_mark"
                android:imeOptions="actionUnspecified"
                android:maxLines="1" />


            <EditText
                android:id="@+id/et_serial_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_serial_number"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:maxLength="@integer/max_length_et_serial_number"
                android:inputType="numberSigned" />


            <EditText
                android:id="@+id/et_type_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_device_type"
                android:imeActionId="@+id/login"
                android:maxLength="@integer/max_length_et_type_device"
                android:imeOptions="actionUnspecified"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model"
                android:maxLength="@integer/max_length_et_model"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:maxLines="1" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/btn_add_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/custom_selector"
                android:text="@string/btn_add_devices" />


        </TableLayout>
    </ScrollView>
</RelativeLayout>
