<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/add_empoyed_activity"
    android:background="@color/background_app_color"
    tools:context=".Activity.AddUserActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
            android:maxLength="@integer/max_length_et_name"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:maxLength="@integer/max_length_et_email"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telephone_number"
            android:maxLength="@integer/max_length_et_serial_number"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_skype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_skype"
            android:maxLength="@integer/max_length_et_skype"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:maxLines="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_user"
            android:textColor="@color/white"
            android:background="@drawable/custom_selector"
            android:id="@+id/btn_added_user" />
    </LinearLayout>
</RelativeLayout>
