<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainMenu"
    android:fitsSystemWindows="true"
    android:background="@color/background_app_color"
    tools:context=".Authorized.MenuActivity"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@mipmap/ic_camera_black_48dp"
        android:layout_marginTop="102dp"
        android:contentDescription="@null"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/btn_weight"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_scan_qr_code"
        android:id="@+id/btn_camera"
        android:drawableTop = "@mipmap/ic_camera_white_24dp"
        android:paddingTop="@dimen/btn_padding_top"
        android:background="@drawable/custom_selector"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <Button
        android:layout_width="@dimen/btn_weight"
        android:layout_height="@dimen/btn_height"
        android:text="@string/lb_employees"
        android:id="@+id/btn_emproyess"
        android:textColor="@color/white"
        android:drawableTop = "@mipmap/ic_perm_identity_white_24dp"
        android:paddingTop="@dimen/btn_padding_top"
        android:background="@drawable/custom_selector"
        android:layout_alignTop="@+id/btn_camera"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2" />

    <Button
        android:layout_width="@dimen/btn_weight"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_scan_show_devices"
        android:id="@+id/btn_show_devices"
        android:drawableTop = "@mipmap/ic_assignment_white_24dp"
        android:paddingTop="@dimen/btn_padding_top"
        android:background="@drawable/custom_selector"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp" />


</RelativeLayout>
